[package]
name = "kvstorage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
byteorder = "1.5.0"
crc = "1.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
log = "0.4.25"
tokio = "1.43.0"
bincode = "1"
serde_derive = "1"
thiserror = "2.0.11"


[lib]
name = "kvstorage"
path = "src/lib.rs"

[[bin]]
name = "kv_mem"
path = "src/main.rs"
